--- a/scss/_albunes.scss
+++ b/scss/_albunes.scss
@@ -1,3 +1,9 @@
+.albumPresentacion{
+  font-size: 2em;
+  font-family: 'Architects Daughter', cursive;
+  padding-left: 1em;
+  padding-right: 1em;
+}
 .album{
   display: flex;
   flex-direction: row;
@@ -52,6 +58,7 @@
 }
 $fotomedida:(
   25: 25%,
+  40: 40%,
   50: 50%,
   75: 75%,
   100: 100%,
