--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 768px) and (max-width: 1100px){
-  header{
+  .navPrincipal{
     background-image: none;
     height: 100%;
     margin: 0px;
@@ -47,7 +47,7 @@
       div{
         padding: 0.5em;
       }
-      .artPrincipal img{
+      img{
         display: none;
       }
   }
@@ -59,27 +59,27 @@
   .contenedorCm{
     display: flex;
     flex-direction: column;
-    .cmUp{
-      margin-top: 2rem;
-      text-align: center;
-        img{
-          width: 50%;
-          vertical-align: center;
-          padding-left: 25%;
-          padding-right: 25%;
-        }
-    }
-    .cmDown{
-      padding-left: 1rem;
-      padding-right: 1rem;
-      text-align: center;
-        img{
-          width: 50%;
-          vertical-align: center;
-          padding-left: 25%;
-          padding-right: 25%;
-        }
-    }
+      .cmUp{
+        margin-top: 2rem;
+        text-align: center;
+          img{
+            width: 50%;
+            vertical-align: center;
+            padding-left: 25%;
+            padding-right: 25%;
+          }
+      }
+      .cmDown{
+        padding-left: 1rem;
+        padding-right: 1rem;
+        text-align: center;
+          img{
+            width: 50%;
+            vertical-align: center;
+            padding-left: 25%;
+            padding-right: 25%;
+          }
+      }
   }
   #pagContacto{
     grid-template-areas:  
@@ -220,7 +220,7 @@
 }
 
 @media only screen and (max-width: 700px){
-  header{
+  .navPrincipal{
     background-image: none;
     height: 100%;
     margin: 0px;
@@ -268,7 +268,7 @@
       div{
         padding: 0.5em;
       }
-      .artPrincipal img{
+      img{
         display: none;
       }
   }
