--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -15,7 +15,7 @@
 	}
 }
 .menu a:hover { 
-	color:green; font-size:1.1em; transition: all 0.5s; 
+	color:green; transition: all 0.5s; 
 }
 .navPrincipal{
 	.navegadorPrincipal{
@@ -29,9 +29,9 @@
 		ul li{
 		  list-style: none;
 		  width: 100px;
-		  font-size: 20px;
+		  font-size: 1.3em;
 		  display: inline-block;
-		  padding-left: 20px; 
+		  padding-left: 1em; 
 		  margin-bottom: 20px;
 		  	a {
   			color:white;
@@ -48,8 +48,8 @@
 		}
 	}
 }
-.navegadorPrincipal a:hover { 
-	color:green; font-size:1.2em; transition: all 0.5s; 
+.navegadorPrincipal .menuPrincipal a:hover { 
+	color:green; transition: all 0.5s; 
 }
 .menu{
   background-color:black;
