--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -51,7 +51,7 @@
 .navegadorPrincipal .menuPrincipal a:hover { 
 	color:green; transition: all 0.5s; 
 }
-.menu{
+.menuAlbum{
   background-color:black;
   height: 75px;
 	li {
