--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -62,3 +62,22 @@
 	  	}
   	}
 }
+.footerAlbum{
+  background: linear-gradient(to bottom, black, silver);
+  border-top: black solid 2px;
+  margin-top: 20px;
+  width: 100%;
+  height: 200px;
+  	.footer__copyright{
+	  	color: $texto;
+	  	margin-top: 2em;
+	  	margin-left: 2em;
+  	}
+  	.footerLogo{
+	  	padding-left: 45%;
+	  	padding-right: 45%;
+	  	img{
+	  		margin-top: 1.5em;
+	  	}
+	}
+}
