--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -15,12 +15,11 @@
         height: 100%;
         margin-top: 0px;
         background-color: none;
-        justify-content: space-around;
-        align-content: space-around;
+        justify-content: center;
           ul li{
             list-style: none;
             width: 1em;
-            font-size: 1em;
+            font-size: 1.5em;
             display: block;
             padding-left: 0.5em; 
             padding-right: 65%; 
@@ -33,8 +32,8 @@
             display: block;
             padding-left: 0.5em;
             padding-right: 65%; 
-            margin-bottom: 1em;
-            margin-top: 1em;
+            margin-bottom: 0.5em;
+            margin-top: 0.5em;
             vertical-align: left;
             align-self: left;
           }
@@ -56,14 +55,17 @@
     font-size: 2em;
     margin-bottom: 2em;
   }
-  .contenedorCm{
+  .fondoCm .contenedorCm{
     display: flex;
     flex-direction: column;
       .cmUp{
+        padding-left: 1rem;
+        padding-right: 1rem;
         margin-top: 2rem;
+        margin-bottom: 2rem;
         text-align: center;
           img{
-            width: 50%;
+            width: 40%;
             vertical-align: center;
             padding-left: 25%;
             padding-right: 25%;
@@ -74,32 +76,32 @@
         padding-right: 1rem;
         text-align: center;
           img{
-            width: 50%;
+            width: 40%;
             vertical-align: center;
             padding-left: 25%;
             padding-right: 25%;
           }
       }
   }
-  #pagContacto{
-    grid-template-areas:  
-    "nav nav"
-    "cd cd"
-    "ci ci"
-    "footer footer";
+  .bodyContacto .pagContacto{
+    flex-direction: column;
       .contactos1{
-        width: 95%;
+        width: 75%;
         margin-left: 1em; 
+        text-align: center;
           img{
             vertical-align: center;
-            padding-right: 25%;
-            padding-left: 25%;
+            padding-right: 50%;
+            padding-left: 50%;
+            padding-top: 1em;
           } 
       }
       .contactos2{
+        width: 75vh;
         padding-right: 25%;
         padding-left: 25%;
-        margin: 0px;
+        margin-top: 1em;
+        margin-bottom: 1.5em;
       }
   }
   .portfolioContainer{
@@ -111,6 +113,11 @@
         text-align: center;
         padding: 10px;
         margin: auto;
+      }
+      .underImg{
+        text-decoration: none;
+        font-size: 2em;
+        font-family: 'Architects Daughter', cursive;
       }
   }
 
@@ -126,8 +133,20 @@
         padding: 0.5em;
       }
   }
-  .menu .volverAtras{
-    display: none;
+  .menuAlbum{
+    background-color:black;
+    height: 100%;
+    width: 100%;
+      .volverAtras{
+        display: none;
+      }
+      li {
+        font-size: 2em;
+        display:inline-block;
+        background-color:black;
+        box-sizing: border-box;
+        padding: 0.5em;
+      }
   }
   .album{
     display: flex;
@@ -217,6 +236,24 @@
         }  
     }
   }
+  .footerAlbum{
+    background: linear-gradient(to bottom, black, silver);
+    border-top: black solid 2px;
+    margin-top: 20px;
+    width: 100%;
+    height: 100%;
+    .footer__copyright{
+      color: white;
+      font-size: 1em;
+      margin-top: 1em;
+      margin-left: 1em;
+      margin-right: 1em;
+    }
+    .footerLogo{
+      list-style: none;
+      color: white;
+    }
+  }   
 }
 
 @media only screen and (max-width: 700px){
@@ -236,12 +273,11 @@
         height: 100%;
         margin-top: 0px;
         background-color: none;
-        justify-content: space-around;
-        align-content: space-around;
+        justify-content: center;
           ul li{
             list-style: none;
             width: 1em;
-            font-size: 1em;
+            font-size: 1.5em;
             display: block;
             padding-left: 0.5em; 
             padding-right: 65%; 
@@ -277,37 +313,36 @@
     font-size: 2em;
     margin-bottom: 2em;
   }
-  .contenedorCm{
+  .fondoCm .contenedorCm{
     display: flex;
     flex-direction: column;
-    .cmUp{
-      margin-top: 2rem;
-      text-align: center;
-        img{
-          width: 50%;
-          vertical-align: center;
-          padding-left: 25%;
-          padding-right: 25%;
-        }
-    }
-    .cmDown{
-      padding-left: 1rem;
-      padding-right: 1rem;
-      text-align: center;
-        img{
-          width: 50%;
-          vertical-align: center;
-          padding-left: 25%;
-          padding-right: 25%;
-        }
-    }
+      .cmUp{
+        padding-left: 1rem;
+        padding-right: 1rem;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        text-align: center;
+          img{
+            width: 40%;
+            vertical-align: center;
+            padding-left: 25%;
+            padding-right: 25%;
+          }
+      }
+      .cmDown{
+        padding-left: 1rem;
+        padding-right: 1rem;
+        text-align: center;
+          img{
+            width: 40%;
+            vertical-align: center;
+            padding-left: 25%;
+            padding-right: 25%;
+          }
+      }
   }
-  #pagContacto{
-    grid-template-areas:  
-    "nav nav"
-    "cd cd"
-    "ci ci"
-    "footer footer";
+  .bodyContacto .pagContacto{
+    flex-direction: column;
       .contactos1{
         width: 95%;
         margin-left: 1em; 
@@ -333,6 +368,11 @@
         padding: 10px;
         margin: auto;
       }
+      .underImg{
+        text-decoration: none;
+        font-size: 2em;
+        font-family: 'Architects Daughter', cursive;
+      }
   }
 
   .menu{
@@ -347,8 +387,21 @@
         padding: 0.5em;
       }
   }
-  .menu .volverAtras{
-    display: none;
+  .menuAlbum{
+    background-color:black;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    padding-left: 1em;
+      .volverAtras{ 
+        display: none;
+      }
+      li{
+        font-size: 1em;
+        background-color:black;
+        padding: 0.5em;
+      }
   }
   .album{
     display: flex;
@@ -359,7 +412,7 @@
     padding: 1em;
       img{
         margin: 1em;
-        width: 100vh;
+        width: 100%;
       }
   }
   .tiposServicios{
@@ -437,5 +490,28 @@
           display: none;
         }  
     }
+  }
+  .footerAlbum{
+    background: linear-gradient(to bottom, black, silver);
+    border-top: black solid 2px;
+    margin-top: 20px;
+    width: 100%;
+    height: 100%;
+    .footer__copyright{
+      color: white;
+      font-size: 1em;
+      margin-top: 1em;
+      margin-left: 1em;
+      margin-right: 1em;
+    }
+    .footerLogo{
+      list-style: none;
+      color: white;
+    }
+  }  
+}
+@media only screen and (min-width: 1100px){
+  .underImg{
+    display: none;
   }
 }
