retoques pre entrega final

--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -3,6 +3,8 @@
   flex-direction: row;
   justify-content: space-between;
   margin-top: 40px;
+  margin-left: 1em;
+  margin-right: 1em;
   flex-wrap: wrap;
     .imgPortfolio{
       position: relative;
