--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,3 +1,4 @@
+@import "reset";
 @import "variables";
 @import "fuente";
 @import "menu";
@@ -9,5 +10,4 @@
 @import "albunes";
 @import "footer";
 @import "responsive";
-
 
