--- a/scss/_communitymanager.scss
+++ b/scss/_communitymanager.scss
@@ -1,19 +1,23 @@
 .bodyCm{
   background-color: #d0dde2;
-  	.tituloCm h2{
-  		text-align: center;
-  		font-size: 2em;
-  		margin-bottom: 2em;
-	  }
-	  .contenedorCm{
-  		display: flex;
-  		flex-direction: row;
-  			.cmUp{
-				margin-top: 5rem;
-			  }
-			  .cmDown{
-  				padding-left: 2rem;
-  				padding-right: 2rem;
-			  }
-	  }
+	.marginCm{
+		margin-right: 1em;
+		margin-left: 1em;
+			.tituloCm h2{
+				text-align: center;
+				font-size: 2em;
+				margin-bottom: 2em;
+			}
+			.contenedorCm{
+				display: flex;
+				flex-direction: row;
+					.cmUp{
+						margin-top: 5rem;
+					}
+					.cmDown{
+						padding-left: 2rem;
+						padding-right: 2rem;
+					}
+			}
+	}
 }
