--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -11,7 +11,7 @@ body{
 	  	background-image: url("../media/fondobanner4.jpg");
 		background-size: cover;
 		background-position: center;
-		height: 99vh;
+		height: 100vh;
 	  	margin: 0px;
 	}
 	article{
@@ -19,6 +19,8 @@ body{
 	  flex-direction: row;
 	  margin-top: 50px;
 	  margin-bottom: 50px;
+	  margin-left: 2em;
+	  margin-right: 2em;
 	  border: 1px solid black;
 		div{
 		  padding: 10px;
